# cometbft-rs

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  release.sh
.cargo/: config
.changelog/: config.toml  epilogue.md
.changelog/unreleased/breaking-changes/: 11-rpc-compat-mode-v1.md  1375-allow-null-in-event-attributes.md  1389-blockidflag-to-primitive.md  31-change-event-attribute-value.md  33-avoid-checking-signature-multiple-times.md  65-add-support-for-v034-037-v038.md  7-proto-v1.md  75-block-domain-type.md  81-cometbft-1.0.0.md  83-fix-prost-version.md  99-v038-dialect.md
.changelog/unreleased/bug-fixes/: 101-export-v0_37-abci-events.md  111-fix-deserialization-from-serde_json_Value.md  1391-block-results-not-ok.md  37-fix-optional-event-type.md  53-bump-deps-to-fix-broken-compile.md  62-result-broadcast.md  63-strip-auth-info.md  77-allow-empty-consensus-params-updates.md  95-fix-feature-flags.md  97-remove-prost-types-dep.md  99-v038-evidence.md
.changelog/unreleased/dependencies/: 58-update-tonic.md  84-fix-prost-version.md
.changelog/unreleased/features/: 1389-missing-serde-derives.md  29-ed25519-consensus-from-impls.md  38-reqwest-client.md  79-genesis-chunked-endpoint.md  81-cometbft-1.0.0.md  92-any-proto.md
.changelog/unreleased/improvements/: 12-rpc-compat-mode-for-v1.md  1374-compatmode-instances.md  1378-expose-rpc-client-builders.md  1379-rpc-http-timeout.md  1385-rpc-make-client-send-wasm32.md  1395-optimize-voting-power-calculation.md  30-decode-empty-commit-in-block.md  32-optimise-voting_power_in.md  34-validator-index-i32-max-limit.md  35-reuse-sign-bytes.md  39-finalizeblock-deserialization.md  40-add-http-client-user-agent.md  88-allow-base64-apphash.md  92-proto-name.md  92-proto-serialization.md
.changelog/v0.1.0-alpha.1/: summary.md
.changelog/v0.1.0-alpha.1/breaking-changes/: 5-cometbft-rs-rename.md  7-proto-v1.md
.changelog/v0.1.0-alpha.2/: summary.md
.github/ISSUE_TEMPLATE/: enhancement.md
.github/workflows/: build.yml  test.yml
cometbft/: Cargo.toml  README.md
cometbft/src/: abci.rs  account.rs  block.rs  bytes.rs  chain.rs  consensus.rs  crypto.rs  duration.rs  evidence.rs  hash.rs  lib.rs  merkle.rs  node.rs  private_key.rs  privval.rs  proposal.rs  proto_macros.rs  public_key.rs  serializers.rs  signature.rs  time.rs  validator.rs  version.rs  vote.rs
cometbft/src/abci/: code.rs  event.rs  kind.rs  request.rs  types.rs
cometbft/tests/: alt_crypto.rs
config/: Cargo.toml
config/src/: config.rs  error.rs  lib.rs  net.rs  node_key.rs  priv_validator_key.rs
config/tests/: mod.rs
config/tests/support/config/: config.toml  node_key.json
docs/architecture/: README.md  adr-013-proto-buf-serde.md
docs/spec/: README.md
go-tools/bisection-testgen/: .gitignore  README.md  go.mod  go.sum  main.go
light-client/: Cargo.toml  README.md
light-client-cli/: Cargo.toml  README.md
light-client-cli/src/: main.rs
light-client-detector/: Cargo.toml  README.md
light-client-detector/src/: conflict.rs  detect.rs  error.rs  evidence.rs  examine.rs  lib.rs  provider.rs  trace.rs
light-client-js/: Cargo.toml  README.md
light-client-js/src/: lib.rs
light-client-js/tests/: web.rs
light-client-verifier/: Cargo.toml  README.md
light-client-verifier/src/: errors.rs  options.rs  predicates.rs  types.rs  verifier.rs
light-client-verifier/src/operations/: commit_validator.rs  voting_power.rs
light-client/src/: components.rs  instance.rs  lib.rs  light_client.rs  tests.rs
light-client/tests/: backward.rs  light_client.rs  model_based.rs
p2p/: Cargo.toml
p2p/src/: secret_connection.rs  transport.rs
pbt-gen/: Cargo.toml  README.md
pbt-gen/src/: time.rs
proto/: Cargo.toml  README.md  buf.gen.yaml
proto/src/: cometbft.rs  lib.rs  prelude.rs  serializers.rs
proto/tests/: unit.rs
rpc/: Cargo.toml  README.md
rpc/src/: client.rs  dialect.rs  endpoint.rs  error.rs  event.rs  lib.rs  paging.rs  query.rs  response_error.rs  rpc_url.rs  serializers.rs  utils.rs
rpc/src/client/: compat.rs  subscription.rs  sync.rs  transport.rs
rpc/src/client/transport/: http.rs  mock.rs  router.rs  websocket.rs
rpc/src/dialect/: begin_block.rs  check_tx.rs  deliver_tx.rs  end_block.rs  v0_34.rs  v0_37.rs  v0_38.rs  v1.rs
rpc/src/endpoint/: abci_info.rs  abci_query.rs  block.rs  block_by_hash.rs  block_results.rs  block_search.rs  blockchain.rs  commit.rs  consensus_params.rs  consensus_state.rs  evidence.rs  genesis.rs  genesis_chunked.rs  header.rs  header_by_hash.rs  net_info.rs  status.rs  subscribe.rs  tx.rs  tx_search.rs  validators.rs
rpc/src/endpoint/broadcast/: tx_async.rs  tx_commit.rs  tx_sync.rs
rpc/src/serializers/: opt_tm_hash_base64.rs  tm_hash_base64.rs  tx_hash_base64.rs
rpc/tests/: dydx_fixtures.rs  gaia_fixtures.rs  kvstore_fixtures.rs  osmosis_fixtures.rs  sei_fixtures.rs
rpc/tests/kvstore_fixtures/: v0_34.rs  v0_37.rs  v0_38.rs
rpc/tests/kvstore_fixtures/v0_34/incoming/: broadcast_tx_async.json  broadcast_tx_sync.json
rpc/tests/kvstore_fixtures/v0_38/incoming/: broadcast_tx_async.json  broadcast_tx_sync.json
std-ext/: Cargo.toml
test/: Cargo.toml
test/src/test/unit/p2p/: secret_connection.rs
test/src/test/unit/p2p/secret_connection/: nonce.rs  public_key.rs
testgen/: Cargo.toml  README.md
testgen/jsonatr-lib/: apalache-cometbft.json  apalache-tendermint.json  apalache_to_lite_test.json  cometbft.json  tendermint.json
testgen/src/: apalache.rs  commit.rs  consensus.rs  header.rs  helpers.rs  lib.rs  light_block.rs  light_chain.rs  tester.rs  time.rs  validator.rs  validator_set.rs  vote.rs
tools/: README.md
tools/abci-test/: Cargo.toml
tools/docker/: README.md  build-images.sh
tools/kvstore-test/: Cargo.toml  Makefile.toml
tools/kvstore-test/src/: lib.rs
tools/kvstore-test/tests/: cometbft.rs  light-client.rs  tendermint.rs
tools/no-std-check/: Cargo.toml  Makefile
tools/no-std-check/examples/: no_std.rs
tools/no-std-check/src/: lib.rs
tools/proto-compiler/: Cargo.toml  README.md
tools/rpc-probe/: Cargo.toml  README.md
(+387 files in other folders)
