[package]
name       = "cometbft-config"
version    = "0.1.0-alpha.1" # Also update depending crates (rpc, light-node, ..) when bumping this.
license    = "Apache-2.0"
homepage   = "https://cometbft.com/"
repository = "https://github.com/cometbft/cometbft-rs"
readme     = "../README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords   = ["blockchain", "bft", "consensus", "cometbft", "tendermint"]
edition    = "2021"

description = """
    cometbft-config provides functions for loading and validating CometBFT
    configuration files. It is moved out of the CometBFT crate for no_std support
    in the cometbft crate.
    """

authors = [
    "Informal Systems <hello@informal.systems>",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cometbft = { version = "0.1.0-alpha.1", default-features = false, features = ["rust-crypto"], path = "../cometbft" }
flex-error = { version = "0.4.4", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8" }
url = { version = "2.2" }

[dev-dependencies]
pretty_assertions = "1.3.0"

[features]
secp256k1 = ["cometbft/secp256k1"]
