[package]
name       = "cometbft-light-client-cli"
version    = "0.34.0"
edition    = "2021"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "bft", "consensus", "cosmos", "cometbft", "tendermint"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
repository = "https://github.com/cometbft/cometbft-rs"
authors    = [
  "Informal Systems <hello@informal.systems>",
]

description = """
    The CometBFT Light Client command line tool.
"""

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cometbft = { version = "0.34.0", path = "../cometbft" }
cometbft-rpc = { version = "0.34.0", path = "../rpc", features = ["http-client"] }
cometbft-light-client = { version = "0.34.0", path = "../light-client" }
cometbft-light-client-detector = { version = "0.34.0", path = "../light-client-detector" }

clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.27"
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
