[package]
name       = "cometbft-std-ext"
version    = "0.34.0"
edition    = "2021"
license    = "Apache-2.0"
homepage   = "https://cometbft.com/"
repository = "https://github.com/cometbft/cometbft-rs"
readme     = "README.md"
keywords   = ["blockchain", "cosmos", "cometbft"]
categories = ["development-tools"]
authors    = ["Informal Systems <hello@informal.systems>"]

description = """
    cometbft-std-ext contains extensions to the Rust standard library for use
    from cometbft-rs.
    """

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
