[package]
name        = "cometbft-test"
description = "cometbft workspace tests and common utilities for testing."
version     = "0.34.0"
edition     = "2021"
license     = "Apache-2.0"
categories  = ["development", "test", "tools"]
repository  = "https://github.com/cometbft/cometbft-rs"
keywords    = ["blockchain", "cometbft", "testing"]
readme      = "README.md"
authors     = ["Alexander Simmerl <a.simmerl@gmail.com>"]

[lib]
test = true

[dev-dependencies]
curve25519-dalek-ng = { version = "4", default-features = false }
ed25519-consensus = { version = "2", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
flume = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["std"] }
readwrite = { version = "^0.1.1", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }

cometbft = { path = "../cometbft", default-features = false }
cometbft-p2p = { path = "../p2p", default-features = false }
cometbft-proto = { path = "../proto", default-features = false }
