[package]
name = "no-std-check"
edition = "2021"
publish = false

[dependencies]
cometbft = { path = "../../cometbft", default-features = false }
cometbft-proto = { path = "../../proto", default-features = false }
cometbft-light-client-verifier = { path = "../../light-client-verifier", default-features = false }

sp-core = { version = "4.0.0", default-features = false, optional = true }
sp-io = { version = "4.0.0", default-features = false, optional = true }
sp-runtime = { version = "4.0.0", default-features = false, optional = true }
sp-std = { version = "4.0.0", default-features = false, optional = true }

[features]
panic-handler = []
use-substrate = [
  "sp-core",
  "sp-io",
  "sp-runtime",
  "sp-std",
]
substrate-std = [
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
